# SecondBreakfast

./: .gitignore  README.md  codex.txt  index.html  package-lock.json  package.json  sortRoot.code-workspace  tailwind.config.ts  vite.config.ts
.github/workflows/: release-windows.yml  version-bump.yml
docs/: ACCEPTANCE.md  BUILD.md  RELEASE_CHECKLIST.md  SPEC.md  THEME_TOKENS.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cleanup.rs  errors.rs  executor.rs  journal.rs  lib.rs  planner.rs  rules.rs  watcher.rs
src/components/cleanup/: CleanupView.tsx
src/components/common/: DryRunDialog.tsx  Onboarding.tsx
src/components/dashboard/: ActivityFeed.tsx  DashboardView.tsx
src/components/rules/: RulesView.tsx
src/components/settings/: SettingsView.tsx
src/components/shell/: AppShell.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  slider.tsx  switch.tsx
src/lib/: api.ts
tools/: bump-version.mjs
